--- a/tugas 1/tugas1.html
+++ b/tugas 1/tugas1.html
@@ -1,129 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adidas Brand</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-    }
-    .navbar {
-      background-color: #000;
-    }
-    .navbar-brand, .nav-link {
-      color: #fff !important;
-    }
-    .hero {
-      background-image: url('https://www.adidas.co.id/media/brand/adidas.jpg');
-      background-size: cover;
-      background-position: center;
-      height: 400px;
-      position: relative;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .hero h1 {
-      font-size: 4rem;
-    }
-    .social-icons img {
-      width: 40px;
-      margin-right: 10px;
-    }
-    footer {
-      background-color: #000;
-      color: white;
-      padding: 20px 0;
-      text-align: center;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nike Linktree - Premium</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+        
+        body {
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #1f1f1f, #333333); 
+            color: #ffffff;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            width: 100%;
+            max-width: 400px;
+            text-align: center;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.05); 
+            border-radius: 15px;
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5); 
+        }
+
+        .logo img {
+            width: 150px;
+            margin-bottom: 30px;
+            animation: fadeIn 1.5s ease-in-out;
+        }
+
+        .link {
+            display: block;
+            background: linear-gradient(90deg, #ff8c00, #ff4800); 
+            color: #ffffff;
+            text-decoration: none;
+            padding: 15px;
+            margin: 15px 0;
+            border-radius: 30px;
+            font-size: 18px;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(255, 72, 0, 0.3); 
+        }
+
+        .link:hover {
+            transform: translateY(-5px); 
+            box-shadow: 0 6px 20px rgba(255, 72, 0, 0.5);
+        }
+
+        .link:active {
+            transform: translateY(0);
+            box-shadow: 0 4px 15px rgba(255, 72, 0, 0.3);
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+    </style>
 </head>
 <body>
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark">
-  <div class="container">
-    <a class="navbar-brand" href="https://www.adidas.co.id">Adidas</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.adidas.co.id">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.adidas.co.id/men">Men's Collection</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.adidas.co.id/women">Women's Collection</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.adidas.co.id/kids">Kids</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.adidas.co.id/new-arrivals">New Arrivals</a>
-        </li>
-      </ul>
+    <div class="container">
+        <div class="logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Logo_NIKE.svg" alt="Nike Logo">
+        </div>
+        
+        <a href="https://www.nike.com" class="link">Shop at Nike</a>
+        <a href="https://www.nike.com/help" class="link">Customer Support</a>
+        <a href="https://www.nike.com/nike-app" class="link">Download Nike App</a>
+        <a href="https://www.nike.com/membership" class="link">Join Nike Membership</a>
+        <a href="https://www.nike.com/community" class="link">Nike Community</a>
     </div>
-  </div>
-</nav>
-
-<!-- Hero Section -->
-<div class="hero">
-  <h1>Welcome to Adidas</h1>
-</div>
-
-<!-- Content Section -->
-<div class="container my-5">
-  <h2>Discover Our Latest Collections</h2>
-  <p>At Adidas, we offer high-quality products for every athlete. Check out our collections for men, women, and kids. Explore the new arrivals and find the perfect fit for you.</p>
-  <p>Visit our official <a href="https://www.adidas.com">global website</a> or explore the <a href="https://www.adidas.co.id">local store</a> for exclusive products in Indonesia.</p>
-  
-  <div class="row">
-    <div class="col-md-4">
-      <img src="https://www.adidas.co.id/media/product/men-shoes.jpg" class="img-fluid" alt="Men's Shoes">
-      <h3>Men's Shoes</h3>
-      <a href="https://www.adidas.co.id/men-shoes" class="btn btn-dark">Shop Now</a>
-    </div>
-    <div class="col-md-4">
-      <img src="https://www.adidas.co.id/media/product/women-shoes.jpg" class="img-fluid" alt="Women's Shoes">
-      <h3>Women's Shoes</h3>
-      <a href="https://www.adidas.co.id/women-shoes" class="btn btn-dark">Shop Now</a>
-    </div>
-    <div class="col-md-4">
-      <img src="https://www.adidas.co.id/media/product/kids-shoes.jpg" class="img-fluid" alt="Kids Shoes">
-      <h3>Kids' Shoes</h3>
-      <a href="https://www.adidas.co.id/kids-shoes" class="btn btn-dark">Shop Now</a>
-    </div>
-  </div>
-</div>
-
-<!-- Social Media Section -->
-<div class="container text-center my-5">
-  <h2>Follow Us on Social Media</h2>
-  <div class="social-icons">
-    <a href="https://www.instagram.com/adidas/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
-    <a href="https://twitter.com/adidas" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/en/6/60/Twitter_Logo_as_of_2021.svg" alt="Twitter"></a>
-    <a href="https://www.facebook.com/adidas" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook"></a>
-    <a href="https://www.youtube.com/adidas" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube"></a>
-    <a href="https://www.linkedin.com/company/adidas" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn"></a>
-  </div>
-</div>
-
-<!-- Footer -->
-<footer>
-  <p>&copy; 2024 Adidas. All rights reserved.</p>
-  <p>Visit our <a href="https://www.adidas.com" class="text-light">official website</a> for more.</p>
-</footer>
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
